--- a/Benchmarking_available_tools/methods/ctat_VIF/test_run/Makefile
+++ b/Benchmarking_available_tools/methods/ctat_VIF/test_run/Makefile
@@ -3,7 +3,7 @@ all:
 
 
 cleanout:
-	sudo rm -rf ./vif_outdir ./cromwell-executions/
+	sudo rm -rf ./vif_outdir ./cromwell-executions/ ./cromwell-workflow-logs/
 
 
 clean: cleanout
