--- a/Benchmarking_available_tools/methods/NF_VIF/test_run/Makefile
+++ b/Benchmarking_available_tools/methods/NF_VIF/test_run/Makefile
@@ -3,7 +3,7 @@ all:
 
 
 clean:
-	rm -f ./reads_R1.fq ./reads_R2.fq ./GRCh38.genome.2bit ./HPVs_db.fasta
+	rm -f ./*_R1.fq ./*_R2.fq ./GRCh38.genome.2bit ./HPVs_db.fasta ./ref_genome.fa
 	rm -rf ./human_reference
 	rm -rf ./HPV_BWT2_index
 	sudo rm -rf ./hpv16
