--- a/Benchmarking_available_tools/methods/ViFi/Docker/Dockerfile
+++ b/Benchmarking_available_tools/methods/ViFi/Docker/Dockerfile
@@ -1,5 +1,4 @@
 FROM ubuntu:18.04
-MAINTAINER mbrown@broadinstitute.org
 ENV DEBIAN_FRONTEND=noninteractive
 
 #~~~~~~~~~~~~~~
@@ -107,9 +106,7 @@ RUN git clone https://github.com/lh3/bwa.git && \
 
 
 #  RUN git clone https://github.com/sara-javadzadeh/ViFi.git
-ARG CACHEBUST=1
-RUN git clone https://github.com/brownmp/ViFi.git
-
+RUN git clone https://github.com/trinityctat/ViFi.git
 
 # RUN wget -q https://raw.githubusercontent.com/klarman-cell-observatory/cumulus/master/docker/monitor_script.sh -O $SRC/CTAT-VirusIntegrationFinder/WDL/monitor_script.sh
 # RUN chmod a+rx $SRC/CTAT-VirusIntegrationFinder/WDL/monitor_script.sh
