--- a/Benchmarking_available_tools/__bmark_bhaas_sim50/Makefile
+++ b/Benchmarking_available_tools/__bmark_bhaas_sim50/Makefile
@@ -6,6 +6,7 @@ ctat_vif:
 	../bmark_scripts/aggregate_ctat_vif.py data/ctat_vif/*vif.refined.tsv > data/ctat_vif.agg.tsv
 	../bmark_scripts/prep_ctat_vif_for_bmarking.py data/ctat_vif.agg.tsv  > data/ctat_vif.agg.tsv.prepped
 	../bmark_scripts/map_to_truth_insertions.py --truth_insertions ./insertion_truth_set.tsv --predicted_insertions data/ctat_vif.agg.tsv.prepped  > data/ctat_vif.agg.tsv.prepped.truthset_mapped
+	../bmark_scripts/analyze_VIF_TP_FP_FNs.Rscript --dat data/ctat_vif.agg.tsv.prepped.truthset_mapped
 
 
 vifi:
