--- a/Benchmarking_available_tools/__bmark_bhaas_sim50/Makefile
+++ b/Benchmarking_available_tools/__bmark_bhaas_sim50/Makefile
@@ -1,4 +1,4 @@
-all: ctat_vif vifi VIRUSBreakend BatVI
+all: ctat_vif vifi VIRUSBreakend BatVI VF2Verse
 
 
 
@@ -31,4 +31,10 @@ BatVI:
 	../bmark_scripts/map_to_truth_insertions.py --truth_insertions ./insertion_truth_set.tsv --predicted_insertions data/batvi.agg.tsv.prepped   > data/batvi.agg.tsv.prepped.truthset_mapped      
 	../bmark_scripts/analyze_VIF_TP_FP_FNs.Rscript --dat data/batvi.agg.tsv.prepped.truthset_mapped
 
+
+VF2Verse:
+	../bmark_scripts/aggregate_VF2Verse.py data/VF2Verse/*.txt > data/VF2Verse.agg.tsv
+	../bmark_scripts/prep_VF2Verse_for_bmarking.py data/VF2Verse.agg.tsv > data/VF2Verse.agg.tsv.prepped
+	../bmark_scripts/map_to_truth_insertions.py --truth_insertions ./insertion_truth_set.tsv --predicted_insertions data/VF2Verse.agg.tsv.prepped   > data/VF2Verse.agg.tsv.prepped.truthset_mapped      
+	../bmark_scripts/analyze_VIF_TP_FP_FNs.Rscript --dat data/VF2Verse.agg.tsv.prepped.truthset_mapped
 
