adding bugfix to crest to avoid run-4ever loop on bin_search

--- a/Benchmarking_available_tools/methods/VirusFinder2/Docker/Dockerfile
+++ b/Benchmarking_available_tools/methods/VirusFinder2/Docker/Dockerfile
@@ -188,6 +188,7 @@ RUN apt-get install -y gcc-multilib
 
 COPY detect_integration.pl $SRC/VirusFinder2.0/
 
+COPY CREST.pl $SRC/VirusFinder2.0/bin/
 
 # Set command to bash
 CMD ["/bin/bash"]
