--- a/4.Combined_VIF_analysis/InsertionHotspots/ExploreEachHotspot/Makefile
+++ b/4.Combined_VIF_analysis/InsertionHotspots/ExploreEachHotspot/Makefile
@@ -9,7 +9,7 @@ prep_make_all_misc_plots:
 
 TCGA_resource_files:
 	wget --no-parent -nH -r --cut-dirs=2  https://data.broadinstitute.org/Trinity/VIF_PAPER/TCGA_resource_files/ 
-
+#   as backup, also here: gs://ctat-virusintegrationfinder-archive/VIF_PAPER/TCGA_resource_files.tar.gz
 
 clean:
 	rm -rf ./TCGA_resource_files
